[gd_scene load_steps=101 format=3 uid="uid://synergy_test_scene01"]

[ext_resource type="Script" path="res://Tests/synergy_test.gd" id="1_syntest"]
[ext_resource type="Script" uid="uid://brlw2wv0mihdu" path="res://Scripts/Effects/ScreenShake.gd" id="2_oxb5w"]
[ext_resource type="PackedScene" uid="uid://q27dsqs2pyd8" path="res://Scenes/UI/crt_overlay.tscn" id="3_f4xs4"]
[ext_resource type="Shader" uid="uid://buwv6htlmlig8" path="res://Scripts/Shaders/backgground_swirl.gdshader" id="3_w6663"]
[ext_resource type="PackedScene" uid="uid://dqgkm7s8toq66" path="res://Scenes/Effects/CRTManager.tscn" id="5_6hkbr"]
[ext_resource type="PackedScene" uid="uid://dugpl3du3i6xo" path="res://Scenes/Dice/dice_hand.tscn" id="5_gxabo"]
[ext_resource type="Texture2D" uid="uid://cq6eysum1qfw8" path="res://Resources/Art/Background/Hutch.png" id="5_sqb4o"]
[ext_resource type="Texture2D" uid="uid://kekn41dhsb0l" path="res://Resources/Art/Background/TV.png" id="5_w4iq5"]
[ext_resource type="PackedScene" uid="uid://c6k045mexxkyd" path="res://Scenes/Dice/dice.tscn" id="6_o8wpr"]
[ext_resource type="PackedScene" uid="uid://bsukvul4wop20" path="res://Scenes/ScoreCard/score_card.tscn" id="7_w6663"]
[ext_resource type="PackedScene" uid="uid://b8limy63m2tlo" path="res://Scenes/Tracker/turn_tracker.tscn" id="8_8eqdw"]
[ext_resource type="PackedScene" uid="uid://lc4xqvsxdnpy" path="res://Scenes/UI/game_button_ui.tscn" id="9_wtptv"]
[ext_resource type="PackedScene" uid="uid://sliaarrkymdo" path="res://Scenes/UI/score_card_ui.tscn" id="11_oy5od"]
[ext_resource type="PackedScene" uid="uid://dv0gypvmv4bb" path="res://Scenes/UI/consumable_ui.tscn" id="12_pdckl"]
[ext_resource type="PackedScene" uid="uid://bxwr5njrkwahy" path="res://Scenes/UI/PowerUpIcon.tscn" id="14_geekk"]
[ext_resource type="PackedScene" uid="uid://bhv7dyrckqhk6" path="res://Scenes/UI/power_up_ui.tscn" id="14_gtvla"]
[ext_resource type="PackedScene" uid="uid://bmnx7dfjhn2d" path="res://Scenes/UI/debuff_ui.tscn" id="14_oxb5w"]
[ext_resource type="PackedScene" uid="uid://cttyyy56pjat3" path="res://Scenes/Controller/game_controller.tscn" id="15_aeiu6"]
[ext_resource type="PackedScene" uid="uid://b0h68l2hpjf3o" path="res://Scenes/PowerUp/power_up_manager.tscn" id="16_07va6"]
[ext_resource type="PackedScene" uid="uid://ihwow3yfegbm" path="res://Scenes/UI/challenge_ui.tscn" id="19_1jk2k"]
[ext_resource type="PackedScene" uid="uid://dw7dok1tye5gg" path="res://Scenes/UI/vcr_turn_tracker_ui.tscn" id="19_w4iq5"]
[ext_resource type="PackedScene" uid="uid://c2brbu8nl4tvq" path="res://Scenes/Managers/consumable_manager.tscn" id="20_1jk2k"]
[ext_resource type="PackedScene" uid="uid://bgwcfpn53s26s" path="res://Scenes/Managers/mod_manager.tscn" id="23_8eqdw"]
[ext_resource type="PackedScene" uid="uid://873jsmje6n6w" path="res://Scenes/Managers/debuff_manager.tscn" id="24_f4xs4"]
[ext_resource type="PackedScene" uid="uid://wmw4qu7qqjfk" path="res://Scenes/Managers/challenge_manager.tscn" id="25_3vaha"]
[ext_resource type="PackedScene" uid="uid://dbqwnxq8iy66l" path="res://Scenes/UI/shop_ui.tscn" id="32_oy5od"]
[ext_resource type="PackedScene" uid="uid://bi8x6vmpd88l6" path="res://Scenes/Managers/RoundManager.tscn" id="42_o2qgl"]
[ext_resource type="PackedScene" uid="uid://s7ortdkxgdxp" path="res://Scenes/UI/DebugPanel.tscn" id="69_6hkbr"]
[ext_resource type="Script" uid="uid://njvt03rpt35v" path="res://Scripts/Effects/scoring_animation_controller.gd" id="91_fjxkw"]
[ext_resource type="PackedScene" uid="uid://ccn3jkgrhqwqe" path="res://Scenes/UI/StatisticsPanel.tscn" id="999_stats"]
[ext_resource type="Script" uid="uid://du88ajtcwgupi" path="res://Scripts/Managers/ChoresManager.gd" id="1000_chores_mgr"]
[ext_resource type="PackedScene" uid="uid://bbafg0xpunx5e" path="res://Scenes/UI/chore_ui.tscn" id="1001_chore_ui"]
[ext_resource type="Script" path="res://Scripts/Managers/SynergyManager.gd" id="1002_synergy_mgr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wtptv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w6663"]
shader = ExtResource("3_w6663")
shader_parameter/polar_coordinates = false
shader_parameter/polar_center = Vector2(0.5, 0.5)
shader_parameter/polar_zoom = 1.0
shader_parameter/polar_repeat = 1.0
shader_parameter/spin_rotation = 0.0
shader_parameter/spin_speed = 0.695
shader_parameter/offset = Vector2(0, 0)
shader_parameter/colour_1 = Color(0.625897, 0.749299, 0.999966, 1)
shader_parameter/colour_2 = Color(0, 0.141422, 0.388962, 1)
shader_parameter/colour_3 = Color(0.505455, 0.00273614, 0.816471, 1)
shader_parameter/contrast = 1.415
shader_parameter/lighting = 0.605
shader_parameter/spin_amount = 0.255
shader_parameter/pixel_filter = 700.0

[node name="SynergyTest" type="Node2D"]
script = ExtResource("1_syntest")

[node name="ScreenShake" type="Node" parent="."]
script = ExtResource("2_oxb5w")

[node name="Background" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_wtptv")
position = Vector2(641, 360)
texture = ExtResource("5_sqb4o")

[node name="BackgroundSwirl" type="ColorRect" parent="Background"]
material = SubResource("ShaderMaterial_w6663")
offset_left = -137.0
offset_top = -274.0
offset_right = 563.0
offset_bottom = 275.0
mouse_filter = 2

[node name="CRTManager" parent="Background" instance=ExtResource("5_6hkbr")]

[node name="CRTOverlay" parent="Background" instance=ExtResource("3_f4xs4")]
offset = Vector2(580, 120)
scale = Vector2(0.45, 0.65)
transform = Transform2D(0.45, 0, 0, 0.65, 580, 120)

[node name="TextureRect" type="TextureRect" parent="Background"]
offset_left = -173.0
offset_top = -319.0
offset_right = 504.0
offset_bottom = 340.0
scale = Vector2(1.15, 1)
texture = ExtResource("5_w4iq5")

[node name="DiceHand" parent="." instance=ExtResource("5_gxabo")]
dice_scene = ExtResource("6_o8wpr")
start_position = Vector2(640, 530)

[node name="DiceContainer" type="Node2D" parent="."]

[node name="ChallengeContainer" type="Node2D" parent="."]

[node name="PowerUpContainer" type="Node2D" parent="."]

[node name="ScoreCard" parent="." instance=ExtResource("7_w6663")]

[node name="TurnTracker" parent="." instance=ExtResource("8_8eqdw")]

[node name="ScoreCardUI" parent="." instance=ExtResource("11_oy5od")]
offset_left = 810.0
offset_top = 145.0
offset_right = 810.0
offset_bottom = 185.0

[node name="PowerUpUI" parent="." instance=ExtResource("14_gtvla")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -3.0
offset_top = 2.0
offset_right = 1276.0
offset_bottom = 720.0
grow_horizontal = 1
grow_vertical = 1
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
power_up_icon_scene = ExtResource("14_geekk")
max_power_ups = 10

[node name="ConsumableUI" parent="." instance=ExtResource("12_pdckl")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -45.0
offset_top = 3.0
offset_right = 1235.0
offset_bottom = 723.0
grow_horizontal = 1
grow_vertical = 1
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
max_consumables = 3

[node name="ChallengeUI" parent="." instance=ExtResource("19_1jk2k")]
z_index = 3
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 38.0
offset_top = 77.0
offset_right = 216.0
offset_bottom = 224.0
grow_horizontal = 1
grow_vertical = 1
round_manager_path = NodePath("../RoundManager")

[node name="DebuffUI" parent="." instance=ExtResource("14_oxb5w")]
z_index = 3
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 323.0
offset_top = 135.0
offset_right = 429.0
offset_bottom = 224.0
grow_horizontal = 1
grow_vertical = 1

[node name="GameButtonUI" parent="." instance=ExtResource("9_wtptv")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 47.0
offset_top = 463.0
offset_right = 47.0
offset_bottom = 463.0
grow_horizontal = 1
grow_vertical = 1
dice_hand_path = NodePath("../DiceHand")
score_card_ui_path = NodePath("../ScoreCardUI")
turn_tracker_path = NodePath("../TurnTracker")
round_manager_path = NodePath("../RoundManager")
challenge_manager_path = NodePath("../ChallengeManager")

[node name="VCRTurnTrackerUI" parent="." instance=ExtResource("19_w4iq5")]
offset_left = 46.0
offset_top = 578.0
offset_right = 398.0
offset_bottom = 633.0

[node name="ShopUI" parent="." instance=ExtResource("32_oy5od")]
visible = false
offset_left = 213.0
offset_top = 4.0
offset_right = 213.0
offset_bottom = 4.0
power_up_manager_path = NodePath("../PowerUpManager")
consumable_manager_path = NodePath("../ConsumableManager")
mod_manager_path = NodePath("../ModManager")

[node name="GameController" parent="." instance=ExtResource("15_aeiu6")]
challenge_container_path = NodePath("../ChallengeContainer")
crt_manager_path = NodePath("../Background/CRTManager")
synergy_manager_path = NodePath("../SynergyManager")

[node name="PowerUpManager" parent="." instance=ExtResource("16_07va6")]

[node name="ChallengeManager" parent="." instance=ExtResource("25_3vaha")]

[node name="ModManager" parent="." instance=ExtResource("23_8eqdw")]

[node name="ConsumableManager" parent="." instance=ExtResource("20_1jk2k")]

[node name="DebuffManager" parent="." instance=ExtResource("24_f4xs4")]

[node name="RoundManager" parent="." instance=ExtResource("42_o2qgl")]
turn_tracker_path = NodePath("../TurnTracker")
challenge_manager_path = NodePath("../ChallengeManager")
dice_hand_path = NodePath("../DiceHand")
scorecard_path = NodePath("../ScoreCard")

[node name="DebugPanel" parent="." instance=ExtResource("69_6hkbr")]
z_index = 10
z_as_relative = false

[node name="StatisticsPanel" parent="." instance=ExtResource("999_stats")]
visible = false

[node name="ScoringAnimationController" type="Node2D" parent="."]
z_index = 11
z_as_relative = false
script = ExtResource("91_fjxkw")

[node name="ChoresManager" type="Node" parent="." groups=["chores_manager"]]
script = ExtResource("1000_chores_mgr")

[node name="ChoreUI" parent="." instance=ExtResource("1001_chore_ui")]

[node name="SynergyManager" type="Node" parent="." groups=["synergy_manager"]]
script = ExtResource("1002_synergy_mgr")
